[package]
name = "lila-pwned"
version = "0.1.0"
publish = false
description = "Webservice to query https://haveibeenpwned.com/ database dumps"
repository = "https://github.com/lichess-org/lila-pwned"
readme = "README.md"
license = "AGPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
keywords = ["password", "lichess"]
edition = "2021"

[profile.release]
strip = true

[dependencies]
axum = "0.7"
btoi = "0.4.3"
clap = { version = "4", features = ["derive", "deprecated"] }
env_logger = "0.11"
hex = "0.4"
indicatif = "0.17"
log = "0.4"
reqwest = "0.12.7"
rocksdb = { version = "0.22", features = ["lz4", "zstd", "jemalloc"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
thiserror = "1"
tikv-jemallocator = "0.5" # matching rocksdb
tokio = { version = "1", features = ["full"] }
zstd = "0.13"
